--- a/scripts/FINAL_DTI_DATA_Management_NC_Flex_V2.ipynb
+++ b/scripts/FINAL_DTI_DATA_Management_NC_Flex_V2.ipynb
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f4ffc3b1",
    "metadata": {},
    "outputs": [
@@ -1821,7 +1821,7 @@
     "\n",
     "listsubwithoutimputed=['1','2','3','5','6','8','9','10','11','12','13','14','15','16','17','19'\n",
     "         ,'20','21','22','23','24','25','26','27','29','30','31','32','33','34','35','36'\n",
-    "         ,'37','38','39','41','46','47','48','49','50']\n",
+    "         ,'37','38','39','41','46','47','48','49','50','51']\n",
     "\n",
     "''''\n",
     "#listsub46removed=['01','02','03','05','06','08','09','10','11','12','13','14','15','16','17','19'\n",
@@ -16621,7 +16621,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "NC_ALL_ENV_DEV",
    "language": "python",
    "name": "python3"
   },
