--- a/scripts/DTI_Aging_Descr&Regression_SL_112025_V1.ipynb
+++ b/scripts/DTI_Aging_Descr&Regression_SL_112025_V1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b0e34a3a",
    "metadata": {},
    "outputs": [],
@@ -15,6 +15,7 @@
     "from sklearn.exceptions import ConvergenceWarning\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
     "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
     "warnings.filterwarnings(\"ignore\", category=ConvergenceWarning)\n",
@@ -49,7 +50,7 @@
     "    file_path = os.path.join(pathcsv, f'{CC}_FA{addtotitle}.csv')\n",
     "    dfCCx = pd.read_csv(file_path, sep=\",\")\n",
     "\n",
-    "    DTI[:,:,i]=dfCCx.values  ## une variable DTI of shape subjects x nodes x n CC\n",
+    "    DTI[:,:,i]=dfCCx.values  ## une variable DTI of shape subjects x nodes x n CCfgh\n",
     "\n",
     "\n"
    ]
